2012-03-06  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/pthread/bits/libc-lock.h: Split information not needed in
	installed headers...
	* sysdeps/pthread/bits/libc-lockP.h: ...here.  New file.

2011-12-22  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/pthread/gai_misc.h (__gai_create_helper_thread): Use
	__pthread_get_minstack.
	* sysdeps/unix/sysv/linux/mq_notify.c (init_mq_netlink): Likewise.

	[BZ #13088]
	* sysdeps/unix/sysv/linux/timer_routines.c: Get minimum stack size
	through __pthread_get_minstack.
	* nptl-init.c (__pthread_initialize_minimal_internal): Get page size
	directly from _rtld_global_ro.
	(__pthread_get_minstack): New function.
	* pthreadP.h: Declare __pthread_get_minstack.
	* Versions (libpthread) [GLIBC_PRIVATE]: Add __pthread_get_minstack.

2011-12-21  Ulrich Drepper  <drepper@gmail.com>

	[BZ #13515]
	* sysdeps/unix/sysv/linux/pthread_getname.c (pthread_getname_np):
	Correct reading name from file.

2011-12-14  Carlos O'Donell  <carlos@systemhalted.org>

	* allocatestack.c (allocate_stack): Return errno on failure.

2011-12-14  Jeff Law  <law@redhat.com>

	[BZ #5245]
	* pthread_create.c (__pthread_create_2_1): Translate ENOMEM to EAGAIN.

2011-11-28  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_wait.S: Handle
	EAGAIN from FUTEX_WAIT_REQUEUE_PI.
	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S: Likewise.

2011-11-15  Ulrich Drepper  <drepper@gmail.com>

	* pthread_getattr_np.c (pthread_getattr_np): Set FD_CLOEXEC for
	/proc/self/maps.

2011-10-29  Ulrich Drepper  <drepper@gmail.com>

	[BZ #13358]
	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S
	(__pthread_cond_timedwait): Initialize %r15 correctly also for code
	path for kernels with FUTEX_CLOCK_REALTIME.
	Debugged by H.J. Lu <hjl.tools@gmail.com>.

2011-10-27  Andreas Schwab  <schwab@redhat.com>

	[BZ #13344]
	* sysdeps/pthread/pthread.h: Use __THREADNL instead of __THREAD
	for memory synchronization functions.